--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
     
     <body>
         <h1>Odin Recipes</h1>
+        <a href="recipes/bruschetta.html">Bruschetta</a>
+        <a href="recipes/lasagna.html">Lasagna</a>
+        <a href="recipes/tiramisu-shots.html">Tiramisu Shots</a>
     </body>
 </html>
