Fix wrong heading

--- a/recipes/bruschetta.html
+++ b/recipes/bruschetta.html
@@ -6,7 +6,7 @@
     </head>
     
     <body>
-        <h1>Lasagna</h1>
+        <h1>Bruschetta</h1>
         <img src="../images/bruschetta.jpg" alt="Bruschetta"/>
         <h2>Description</h2>
         <p>Bruschetta is a famous Italian dish made with French or Italian loaf and topped with your favorite dressing. In this recipe, the dressing is prepared from tomatoes, garlic, cheese, and basil. Garlic Tomato Bruschetta can be a great brunch or breakfast option with your friends.</p>
