--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
     <head>
         <meta-charset="utf-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     
     <body>
-        <h1>Odin Recipes</h1>
-        <a href="recipes/bruschetta.html">Bruschetta</a>
-        <a href="recipes/lasagna.html">Lasagna</a>
-        <a href="recipes/tiramisu-shots.html">Tiramisu Shots</a>
+        <h1 id="web-heading">Odin Recipes</h1>
+        <a href="recipes/bruschetta.html" class="nav">Bruschetta</a>
+        <a href="recipes/lasagna.html" class="nav">Lasagna</a>
+        <a href="recipes/tiramisu-shots.html" class="nav">Tiramisu Shots</a>
     </body>
 </html>
